layout problem fixed, change position (right) and padding of descriptions

--- a/style.css
+++ b/style.css
@@ -153,10 +153,10 @@ a:link {
   font-size: 20px;
   opacity: 0;
   position: absolute;
-  right: 0;
+  right: 35;
   top: 9px;
   background-color: transparent;
-  padding: 10px;
+  padding: 30px;
   white-space: pre-wrap; /* allow description to wrap to multiple lines */
   width: calc(35% - 60px);
   line-height: 1.5;
